旋转排列数组

--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -505,3 +505,40 @@ public:
     }
 };
 ```
+
+### 153. 寻找旋转排列数组中的最小值
+- 有序数组后经过旋转的最小值，为序列中的变化点
+- 可以通过改造二分查找进行去确定
+- 在套用模板时发现：利用`left<=right`这套模版实现起来需要考虑诸多细节，bug频出
+- 因此使用`left<right`模板来实现:
+    - leetcode上的有用总结：
+> **while(l<=r) 适用于中间会产生结果**，比如求平方根，中间每一步都是结果，最后l>r之前的一步结果为最后结果
+> **while(l<r)适用于夹逼出唯一一个结果**，如果求峰值，峰值一定存在，那么只要夹逼出l=r的情况就是结果。
+
+```class Solution {
+public:
+    int findMin(vector<int>& nums) {
+        int left = 0;
+        int right = nums.size()-1;
+        
+        while(left<right){
+            int mid = left +(right-left)/2;
+            //cout<<'l'<<left<<endl;
+            if(nums[mid]<nums[left]){
+                right=mid;
+            }
+            else if(nums[mid]>=nums[left]){               
+                if(nums[mid]>nums[right]){
+                    left=mid+1;
+                    
+                }
+                else{
+                    return nums[left];      
+                }
+            }
+        }
+        //cout<<left<<endl;
+        return nums[left];
+    }
+};
+```
