--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -542,3 +542,46 @@ public:
     }
 };
 ```
+### 寻找旋转排列数组中的最小值2
+- 有重复值的情况 hard
+- 需要在上一个解法的基础考虑重复值的影响
+
+```class Solution {
+public:
+    int findMin(vector<int>& nums) {
+        int left = 0;
+        int right = nums.size()-1;
+        while(left<right){
+            int mid = left+(right-left)/2;
+           
+            if(nums[mid]<nums[left]){
+                right=mid;
+            }
+            else if(nums[mid]>nums[left]){
+                //cout<<'l'<<left<<endl;
+                if(nums[mid]>nums[right])
+                    left=mid+1;
+                else if(nums[mid]<=nums[right])
+                {   
+                    return nums[left];
+                }     
+            }
+            else if(nums[mid]==nums[left]){
+                if(nums[mid]>nums[right]){
+                    left=mid+1;
+                }
+                else if(nums[mid]<nums[right]){
+                    right=mid;
+                }
+                else if(nums[mid]==nums[right]){
+                    right--;
+                }
+            }
+            //cout<<'l'<<left<<endl;
+        }
+        return nums[left];
+
+    }
+};
+
+```
