--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -585,3 +585,34 @@ public:
 };
 
 ```
+
+### 两个数组的交集
+- intersection计算
+- 基于set哈希表进行计算是最简单的思路，
+    - 对数组进行去重，然后对比
+    - 时间复杂度： O(N） 空间复杂度 O(N)
+```class Solution {
+public:
+    vector<int> getIntersection(set<int> s1, set<int> s2) {
+        if (s1.size() > s2.size())
+            getIntersection(s2,s1);
+        vector<int> res;
+        for (auto i : s1) {
+            if (s2.count(i)) {
+                res.push_back(i);
+            }
+        }
+        return res;
+    }
+    vector<int> intersection(vector<int>& nums1, vector<int>& nums2) {
+        int idx_0, idx_1 = 0;
+        set<int> s1, s2;
+        
+        for (auto i : nums1) 
+            s1.insert(i);
+        for (auto i : nums2)
+            s2.insert(i);
+        return getIntersection(s1,s2);
+    }
+};
+```
