--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -587,7 +587,7 @@ public:
 ```
 
 ### 两个数组的交集
-- intersection计算
+- **intersection计算**
 - 基于set哈希表进行计算是最简单的思路，
     - 对数组进行去重，然后对比
     - 时间复杂度： O(N） 空间复杂度 O(N)
@@ -613,6 +613,103 @@ public:
         for (auto i : nums2)
             s2.insert(i);
         return getIntersection(s1,s2);
+    }
+};
+```
+- 其他思路： 先对数组进行排序，然后利用双指针法从左到右进行遍历处理
+    - 时间复杂度： O(mlogm+nlogn) 主要复杂度在列表排序上
+```class Solution {
+public:
+    vector<int> intersection(vector<int>& nums1, vector<int>& nums2) {
+        sort(nums1.begin(), nums1.end());
+        sort(nums2.begin(), nums2.end());
+        int length1 = nums1.size(), length2 = nums2.size();
+        int index1 = 0, index2 = 0;
+        vector<int> intersection;
+        while (index1 < length1 && index2 < length2) {
+            int num1 = nums1[index1], num2 = nums2[index2];
+            if (num1 == num2) {
+                // 保证加入元素的唯一性
+                if (!intersection.size() || num1 != intersection.back()) {
+                    intersection.push_back(num1);
+                }
+                index1++;
+                index2++;
+            } else if (num1 < num2) {
+                index1++;
+            } else {
+                index2++;
+            }
+        }
+        return intersection;
+    }
+};
+
+```
+
+### TwoSum 2 (输入有序数组)
+- 给定两数之和，找出数组中对应的两个数的索引
+- 思路1： 双指针法：
+    - 设定左右指针，比较两数之和与targe的差距，进行左右指针的调整
+    - 时间复杂度： O(N)
+    - 方法合理性的相关解释：
+> 假设 `\text{numbers}[i]+\text{numbers}[j]=\text{target}numbers[i]+numbers[j]=target` 是唯一解，其中 `0 \leq i<j \leq \text{numbers.length}-10≤i<j≤numbers.length−1`。初始时两个指针分别指向下标 00 和下标 \text{numbers.length}-1numbers.length−1，左指针指向的下标小于或等于 `i`，右指针指向的下标大于或等于 `j`。除非初始时左指针和右指针已经位于下标 `i` 和 `j`，否则一定是左指针先到达下标 `i`的位置或者右指针先到达下标 `j` 的位置。
+> **如果左指针先到达下标 `i` 的位置，此时右指针还在下标 `j`的右侧，`\text{sum}>\text{target}sum>target`，因此一定是右指针左移，左指针不可能移到 `i` 的右侧**。
+> 如果右指针先到达下标 jj 的位置，此时左指针还在下标 `i` 的左侧，`\text{sum}<\text{target}sum<target`，因此一定是左指针右移，右指针不可能移到 `j` 的左侧。
+> 由此可见，在整个移动过程中，左指针不可能移到 `i` 的右侧，右指针不可能移到 `j` 的左侧，因此不会把可能的解过滤掉。由于题目确保有唯一的答案，因此使用双指针一定可以找到答案
+
+```class Solution {
+public:
+    vector<int> twoSum(vector<int>& numbers, int target) {
+        int left = 0;
+        int right = numbers.size()-1;
+        vector<int> res;
+        while(left < right) {
+            if (numbers[left] + numbers[right] < target) {
+                left++;
+            }
+            else if (numbers[left] + numbers[right] > target) {
+                right--;
+            }
+            else {
+                res.push_back(left+1);
+                res.push_back(right+1);
+                return res;
+            }
+        }
+        return res;
+    }
+};
+```
+
+- 思路2： 基于二分查找
+    - 给定第一个数，寻找第二个数是否存在是最朴素的思路
+    - 利用二分查找来寻找target-i能够避免 `O(n^2)`的复杂度
+    - 时间复杂度 ： `O(nlogn)`
+```class Solution {
+public:
+    vector<int> twoSum(vector<int>& numbers, int target) {     
+        vector<int> res;
+        for (int i = 0; i < numbers.size()-1; i++) {
+            int left = i+1;
+            int right = numbers.size() - 1;
+            int t = target - numbers[i];
+            while (left <= right) {
+                int mid = left + (right - left)/2;
+                if (numbers[mid] == t) {
+                    res.push_back(i+1);
+                    res.push_back(mid+1);
+                    return res;
+                }
+                else if (numbers[mid] < t) {
+                    left = mid + 1;
+                }
+                else {
+                    right = mid - 1;
+                }
+            }
+        }
+        return res;
     }
 };
 ```
