--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -713,3 +713,78 @@ public:
     }
 };
 ```
+
+
+### 寻找重复数
+
+-  排序+遍历
+    - 最为朴素的方法，可能不符合题目要求/限制
+    - 时间复杂度： O(nlogN)
+```class Solution {
+public:
+    int findDuplicate(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        for (int i = 0; i < nums.size() - 1; i++) {
+            if (nums[i] == nums[i+1])
+                return nums[i];
+        }
+        return nums[0];
+    }
+};
+```
+- 二分查找法
+    - 本题有特殊设置：
+        - 给定的数组元素范围在`[1,n]`之间，共有`1+n`个元素
+        - 根据抽屉原理，必然存在重复的元素；
+        - 常规的二分查找方法无法直接应用于本题的数组中 因为数据是无序的
+        - 需要根据抽屉原理来进行查找： 具体而言，从1～n中遍历，查找小于等于x (`<=x`)的值的数量 `cnt`
+        - 如果`cnt <= x`则说明区间`[1,x]`不存在重复情况，否则说明`[1,x]`区间必然存在重复
+    - 时间复杂度： O(nlogn)
+```class Solution {
+public:
+    int findDuplicate(vector<int>& nums) {
+        int left = 1;
+        int right = nums.size()-1;
+        while (left < right) {
+            int mid = left + (right - left)/2;
+            int cnt = 0;
+            for (auto i : nums) {
+                if (i <= mid) {
+                    cnt ++;
+                }
+            }
+            if (cnt > mid) {
+                //存在重复 <=mid的值在
+                right = mid;
+            }
+            else {
+                left = mid + 1;
+            }
+        }
+        return left;
+    }
+};
+```
+
+### 快慢指针法
+- 如果将数组构成一个链表形式的话，可以用快慢指针法来找到链表的环
+- 通过链表查环的操作来变相实现重复数字的查找
+- 时间复杂度 O(n) 空间复杂度 O(1)
+- 该题目下最优的解法
+```class Solution {
+public:
+    int findDuplicate(vector<int>& nums) {
+        int slow = 0, fast = 0;
+        do {
+            slow = nums[slow];
+            fast = nums[nums[fast]];
+        } while (slow != fast);
+        slow = 0;
+        do {
+            slow = nums[slow];
+            fast = nums[fast];
+        } while (slow != fast); 
+        return slow;
+    }
+};
+```
