--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -133,7 +133,7 @@ public:
 };
 ```
 
-### 33. 搜索旋转排序数组
+### 33. 搜索旋转排序数组 [KEY]
 - 中等题目
 - 给定的数组经过旋转后，是部分有序的。
 - 查找中的区间定位要发生改变，要考虑部分有序的区间来搜索：
@@ -275,7 +275,7 @@ public:
 ```
 最终返回的是【start+1，end]，主要看循环条件的设置： **end-(start+1)<k**
 
-- **二分查找的进阶优化**： 
+- **二分查找的进阶优化**：  **[KEY]**
     - 直接通过二分查找找到最优区间的左边界，当target位于区间内时通过收缩左边界来寻找最优结果
     - 二分查找的模板改造：
         1. right改为 `len-1-k`
@@ -788,3 +788,221 @@ public:
     }
 };
 ```
+
+### 4. 寻找两个正序数组的中位数
+- hard
+- 问题转化：
+    - 定义为：**计算两个数组中k-th小的数字**
+    - https://leetcode-cn.com/problems/median-of-two-sorted-arrays/solution/di-k-xiao-shu-jie-fa-ni-zhen-de-dong-ma-by-geek-8m/
+    - 两个数组均为有序数组，所以可以采取二分的思想寻找k-th小的数字
+        - 对于数组A，B，`k = (l_A + l_B) / 2 ` 或者 `k = (l_A + l_B + 1) / 2` 如果`A[k/2-1] <= B[k/2-1]`,则说明区间`A[0~k/2-1]`这k/2个元素肯定不包含k-th小数字，可以排除这部分数据，在A数组中继续往前搜索：由于已经排除了k/2的数据，所以下面搜索的范围变为`k-k/2`
+        - 当k变为1时，即可进行返回判断，返回最小值
+
+```class Solution {
+public:
+    int getKthElments(vector<int>& nums1, vector<int>& nums2, int k) {
+        int m = nums1.size();
+        int n = nums2.size();
+        int index1 = 0;
+        int index2 = 0;
+        while (true) {
+            if (index1 == m) {
+                return nums2[index2 + k - 1];
+            }
+            if (index2 == n) {
+                return nums1[index1 + k - 1];
+            }
+            if (k == 1) {
+                return min(nums1[index1], nums2[index2]);
+            }
+            int newIndex1 = min(index1 + k / 2 - 1, m - 1);
+            int newIndex2 = min(index2 + k / 2 - 1, n - 1);
+            if (nums1[newIndex1] <= nums2[newIndex2]) {
+                k -= newIndex1 - index1 + 1; //调整搜索空间
+                index1 = newIndex1 + 1;  //设置索引
+            }
+            else {
+                k -= newIndex2 - index2 + 1;
+                index2 = newIndex2 + 1; 
+            }
+        }
+    }
+    double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
+        int l1 = nums1.size();
+        int l2 = nums2.size();
+        if ((l1 + l2)%2 == 0) {
+            return (getKthElments(nums1, nums2, (l1 + l2) / 2) + getKthElments(nums1, nums2, (l1 + l2) / 2 + 1)) / 2.0;
+        }
+        else {
+            return getKthElments(nums1, nums2, (l1 + l2 + 1) / 2);
+        }
+
+
+
+    }
+};
+```
+
+- 思路2：更加直接的二分查找： 划分数组
+    - 直接查找数组里面的分割index
+    - 边界问题比较棘手
+    - 时间复杂度也是 O(log (m+n))
+
+```class Solution {
+public:
+    double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
+        int l1 = nums1.size();
+        int l2 = nums2.size();
+        if (l1 > l2) {
+            return findMedianSortedArrays(nums2, nums1);
+        }
+        int left = 0;
+        int right = l1;
+        int k = (l1 + l2 + 1) / 2;
+        while (left < right) {
+            int mid = left + (right - left) / 2;
+            if (nums1[mid] < nums2[k - 1 - mid]) {
+                left = mid +1;
+            } 
+            else {
+                right = mid;
+            }
+        }
+ 
+        int c1 = max(left <= 0 ? INT_MIN:nums1[left-1],
+                          k - left <= 0 ? INT_MIN:nums2[k - left -1]);
+
+        if ((l1 + l2) % 2 == 1) {
+            return c1;
+        }
+        else {
+            int c2 = min(left >= l1 ? INT_MAX:nums1[left],
+                          k - left >= l2 ? INT_MAX:nums2[k - left]);
+
+            return (c1 + c2) / 2.0;
+        }
+
+    }
+};
+```
+
+### 719. 寻找第k小的距离对 [KEY]
+
+-  又是一个典型的二分查找的变形应用，依然hard
+- 与上一道题目相似，也是要做一些任务转化，本质都是求k-th小的数字
+    - 同样通过计算`cnt(x)= count(i<=x)`统计小于等于x的数字来进行判断
+    - 只不过这个地方是对距离值进行判断，判断有多少对距离值小于等于x
+    - 当`cnt < k`时： 说明当前值x肯定不是目标值，可以往前搜索
+    - **本质上模板等同于二分查找找左/右边界的情况**
+- 时间复杂度： O(NlogN + NlogW) : 包括两个部分：数组排序部分 和  二分查找部分
+
+
+```class Solution {
+public:
+    int smallestDistancePair(vector<int>& nums, int k) {
+        if (nums.empty()) 
+            return 0;
+        sort (nums.begin(), nums.end());
+        int left = 0;
+        int right = nums[nums.size() - 1] - nums[0];
+        while (left < right) {
+            int mid = left + (right - left) / 2;
+            int l = 0, count = 0;
+            for (int i = 0; i < nums.size(); i++){
+                while ((nums[i] - nums[l]) > mid)
+                    l ++;
+                count += (i - l);
+                //cout << i << endl;
+            }
+            if (count < k) 
+                left = mid + 1;
+            else
+                right = mid;
+        }
+        return left;
+
+    }
+};
+```
+
+### 410. 分割数组的最大值 [KEY]
+- hard模式
+- 将无序数组划分为m个连续子序列，计算最小的分割序列最大值
+- 采用动态规划或者二分查找法
+- **二分查找法适用于计算最小的最大值的问题**
+    - 搜索空间为`[max, sum]`数组最大值和数组元素之和
+    - 每次判断目标值作为最小的最大值时，有多少个子序列满足要求(通过贪心的方式计算)，即计算cnt，与前两题目有相似之处。
+    - 在计算cnt时，需要注意初始值⚠️。
+    - 时间复杂度为： O(N*log(sum - max))
+```class Solution {
+public:
+    bool check(vector<int>& nums, int x, int m) {
+        int cnt = 1; // 根据判断条件
+        long long sum = 0;
+        for ( auto i : nums) {
+            if (sum + i > x) {
+                sum = i;
+                cnt ++;
+            }
+            else {
+                sum += i;
+            }
+        }
+        return cnt <= m;
+    }
+    int splitArray(vector<int>& nums, int m) {
+        int left = 0;
+        int right = 0;
+        for (auto i : nums) {
+            if (i > left) 
+                left = i;
+            right += i;
+        }
+        while (left < right) {
+            int mid = left + (right - left) / 2;
+            if (check(nums, mid, m))
+                right = mid;
+            else 
+                left = mid + 1;
+        }
+        return left;
+    }
+};
+```
+- 其他思路： **动态规划**
+- 动态规划状态公式： 将i个数分割为j个子序列的最优值：$dp[i][j]= min_{k=0}^{i-1} max(dp[k][j-1],sub(k+1,i))$其中$i>=j$, 结果为dp[n][m]
+- 注意创建dp二维状态数组的大小和初始化情况。
+
+
+```class Solution {
+public:
+    int splitArray(vector<int>& nums, int m) {
+        int n = nums.size();
+        cout << max(1,2) << endl;
+        // dp state [n+1][m+1]
+        vector<vector<long long>> dp(n + 1, vector<long long>(m + 1, LLONG_MAX));
+        vector<long long> sub(n + 1, 0);
+        for (int i = 0; i < n; i++) {
+            sub[i + 1] = sub[i] + nums[i];
+        }
+        dp[0][0] = 0;
+        for (int i = 1; i <= n; i++) {
+            // dp[i][j] = min max(dp[k][j-1], sub(k+1, i)) i个数分割为j份 i>=j
+            for (int k = 0; k < i; k++) {
+                for (int j = 1; j <= min(i, m); j++) {
+                    dp[i][j] = min(dp[i][j], max(dp[k][j - 1], sub[i] - sub[k]));
+                }
+            }
+        }
+        return dp[n][m];
+    }
+};
+```
+
+
+## 总结体会
+- 二分查找的应用思考：本质上需要在一定空间上按照某种依据进行答案搜索的情况，可以通过二分查找缩小搜索空间，严格依赖有序性。
+- 关键要素：
+    - **搜索空间**： 在哪个空间上搜索，复杂题目往往需要自己确定这个空间，如寻找第k小的距离对，搜索空间肯定不是给定的数组，而是距离对的范围`[min,max]`
+    - **搜索依据与方向**： 根据任务确定判断依据，以及对应的搜索方向
+    - **终止条件**： left < right / left <= right 
