--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -650,7 +650,7 @@ public:
 ### TwoSum 2 (输入有序数组)
 - 给定两数之和，找出数组中对应的两个数的索引
 - 思路1： 双指针法：
-    - 设定左右指针，比较两数之和与targe的差距，进行左右指针的调整
+    - 设定左右指针，比较两数之和与target的差距，进行左右指针的调整
     - 时间复杂度： O(N)
     - 方法合理性的相关解释：
 > 假设 `\text{numbers}[i]+\text{numbers}[j]=\text{target}numbers[i]+numbers[j]=target` 是唯一解，其中 `0 \leq i<j \leq \text{numbers.length}-10≤i<j≤numbers.length−1`。初始时两个指针分别指向下标 00 和下标 \text{numbers.length}-1numbers.length−1，左指针指向的下标小于或等于 `i`，右指针指向的下标大于或等于 `j`。除非初始时左指针和右指针已经位于下标 `i` 和 `j`，否则一定是左指针先到达下标 `i`的位置或者右指针先到达下标 `j` 的位置。
