--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -10,21 +10,228 @@
 验证二叉搜索树，
 二叉树的层次遍历 和 将有序数组转换为二叉搜索树
 
-- 主要要掌握：二叉树的遍历方式BFS、DFS，以及对应的先序(根-左-右)/中序(左 根 右)/后序(左 右 根)/层级遍历
+- 主要要掌握：
+  - 二叉树的遍历方式BFS、DFS，
+  - 以及对应的先序(根-左-右)/中序(左 根 右)/后序(左 右 根)/层级遍历
+  - 中序遍历与二叉搜索树对应(BST)
 
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
 <!-- code_chunk_output -->
 
-- [104. 二叉树的最大深度](#104-二叉树的最大深度)
-- [98. 验证二叉搜索树](#98-验证二叉搜索树)
-- [101. 对称二叉树](#101-对称二叉树)
+- [树的遍历不同方式](#树的遍历不同方式)
+  - [先序遍历](#先序遍历)
+  - [中序遍历 L Root R](#中序遍历-l-root-r)
+  - [后序遍历 L R root](#后序遍历-l-r-root)
 - [102. 二叉树的层序遍历](#102-二叉树的层序遍历)
-- [108. 有序数组转搜索二叉树](#108-有序数组转搜索二叉树)
+- [递归解二叉树问题模板](#递归解二叉树问题模板)
+  - [自顶而下](#自顶而下)
+  - [自底而上](#自底而上)
+- [104. 二叉树的最大深度](#104-二叉树的最大深度)
+- [98. 验证二叉搜索树 [KEY]](#98-验证二叉搜索树-key)
+- [101. 对称二叉树](#101-对称二叉树)
+- [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
 
 <!-- /code_chunk_output -->
 
+### 树的遍历不同方式
 
+#### 先序遍历
+```
+class Solution {
+    vector<int> res;
+public:
+    void preoderTrav(TreeNode* root) {
+        if (root == nullptr) {
+            return;
+        }
+        res.push_back(root -> val);
+        preoderTrav(root -> left);
+        preoderTrav(root -> right);
+    }
+    vector<int> preorderTraversal(TreeNode* root) {
+        preoderTrav(root);
+        return res;
+    }
+};
+```
+- **迭代方式进行:基于栈实现，首先将left节点压到低，然后开始进行节点弹出，并转换到右子树**
+
+```
+class Solution {
+    vector<int> res;
+public:
+    vector<int> preorderTraversal(TreeNode* root) {
+        stack<TreeNode*> st;
+        while (!st.empty() || root != nullptr) {
+            while (root) {
+                res.push_back(root -> val);
+                st.push(root);
+                root = root -> left;
+            }
+            root = st.top();
+            st.pop();
+            root = root -> right;
+        }
+        return res;
+    }
+};
+``` 
+#### 中序遍历 L Root R
+- 迭代方式：
+```
+class Solution {
+public:
+    vector<int> inorderTraversal(TreeNode* root) {
+        stack<TreeNode*> st;
+        vector<int> res;
+        while (!st.empty() || root != nullptr) {
+            while (root) {
+                st.push(root);
+                root = root -> left;
+            }
+            root = st.top();
+            res.push_back(root -> val);
+            st.pop();
+            root = root -> right; 
+        }
+        return res;
+    }
+};
+```
+#### 后序遍历 L R root
+- 递归方式
+```
+class Solution {
+public:
+    vector<int> res;
+    void postorderTrav(TreeNode* root) {
+        if (root == nullptr) {
+            return;
+        }
+        postorderTrav(root -> left);
+        postorderTrav(root -> right);
+        res.push_back(root -> val);
+    }
+    vector<int> postorderTraversal(TreeNode* root) {
+        postorderTrav(root);
+        return res;
+    }
+};
+```
+
+- 迭代方式: 稍微复杂一点，要考虑到左子树遍历完成后，右子树是否有节点，
+```
+class Solution {
+public:
+    vector<int> res;
+    vector<int> postorderTraversal(TreeNode* root) {
+        stack<TreeNode* > st;
+        TreeNode* prev = nullptr;
+        while (!st.empty() || root != nullptr) {
+            while (root) {
+                st.push(root);
+                root = root -> left;
+            }
+            root = st.top();
+            st.pop();  
+            // 右边为空 或者之前已经遍历过了，则就不再深入，直接把当前root添加入res中
+            if (root -> right == nullptr || root -> right == prev) {
+                res.push_back(root -> val);
+                prev = root;
+                root = nullptr;
+            }
+            // 右边还是具有节点的，那么调整方面继续入栈
+            else {
+                st.push(root);
+                root = root -> right;
+            }
+        }
+        return res;
+    }
+};
+```
+
+### 102. 二叉树的层序遍历
+
+- 最简单的做法：利用BFS做层序遍历，利用队列存储节点指针，每层运算结束时记录当前层的数组
+```
+class Solution {
+public:
+    vector<vector<int>> levelOrder(TreeNode* root) {
+        vector<vector<int>> res;
+        if(root==NULL) return res;
+        queue<TreeNode*>Q;
+        Q.push(root);
+       
+        while(Q.size()>0){
+            
+            vector<int> tmp;
+            int sz=Q.size();
+            while(sz){
+                TreeNode * node=Q.front();
+                Q.pop();
+                if(node->left){
+                    Q.push(node->left);
+                }
+                if(node->right){
+                    Q.push(node->right);
+                }
+                tmp.push_back(node->val);
+                sz--;
+            }
+            res.push_back(tmp);
+            
+        }
+        return res;
+    }
+};
+
+```
+- 递归方式： 利用DFS的思想进行遍历，并根据遍历的深度存储数组：利用先序遍历的方式完成任务，只是额外添加了遍历层数，使得能够记录数字对应的层数；
+![avatar](102.png)
+![avatar](102-02.png)
+```
+class Solution {
+public:
+    vector<vector<int>> res;
+    void _level(TreeNode* root,int level){
+        if(root==NULL) return;
+        if(level>=res.size()){
+            res.push_back(vector<int>()); //提前添加空数组
+        }
+        res[level].push_back(root->val);
+        _level(root->left,level+1);
+        _level(root->right,level+1);
+    }
+    vector<vector<int>> levelOrder(TreeNode* root) {
+        _level(root,0);  
+        return res;
+    }
+};
+```
+
+### 递归解二叉树问题模板
+#### 自顶而下
+- 在递归中先更新结果或者目标信息， 与先序遍历相似，*先记录结果当前结果*
+  - 能确定一些参数，从**该节点自身解决出发**寻找答案吗？
+  - 可以使用这些参数和节点本身的值来**决定什么应该是传递给它子节点的参数**吗？
+```
+1. return specific value for null node
+2. update the answer if needed                      // answer <-- params
+3. left_ans = top_down(root.left, left_params)		// left_params <-- root.val, params
+4. right_ans = top_down(root.right, right_params)	// right_params <-- root.val, params
+5. return the answer if needed 
+```
+#### 自底而上
+- 对所有子节点递归调用函数，根据返回值和节点信息得到答案，即自底而上，类似于后序遍历
+- 对于树中的任意一个节点，如果知道它子节点的答案，就能计算出该节点的答案
+```
+1. return specific value for null node
+2. left_ans = bottom_up(root.left)			// call function recursively for left child
+3. right_ans = bottom_up(root.right)		// call function recursively for right child
+4. return answer
+```
 ### 104. 二叉树的最大深度
 
 - 二叉树遍历问题： BFS/DFS
@@ -49,6 +256,28 @@ public:
             return 0;
         }
         return max(maxDepth(root->left),maxDepth(root->right))+1;
+    }
+};
+```
+- 基于自顶而下的递归思想
+```
+class Solution {
+public:
+    int ans = 0;
+    void dfs(TreeNode* root, int depth) {
+        if (root == nullptr)
+            return;
+        if (!root -> left && !root -> right )
+            ans = max(ans, depth);
+        dfs(root -> left, depth + 1);
+        dfs(root -> right, depth + 1);
+    }
+    int maxDepth(TreeNode* root) {
+        if (!root) 
+            return 0;
+        dfs(root, 0);
+        return ans + 1;
+
     }
 };
 ```
@@ -86,7 +315,7 @@ public:
 ![avatar](./dfs-0.png)
 ![avatar](./dfs-1.png)
 
-### 98. 验证二叉搜索树
+### 98. 验证二叉搜索树 [KEY]
 
 - 涉及基本的二叉树遍历以及二叉搜索树性质
 
@@ -204,69 +433,7 @@ public:
 };
 ```
 
-### 102. 二叉树的层序遍历
-
-- 最简单的做法：利用BFS做层序遍历，利用队列存储节点指针，每层运算结束时记录当前层的数组
-
-```
-class Solution {
-public:
-    vector<vector<int>> levelOrder(TreeNode* root) {
-        vector<vector<int>> res;
-        if(root==NULL) return res;
-        queue<TreeNode*>Q;
-        Q.push(root);
-       
-        while(Q.size()>0){
-            
-            vector<int> tmp;
-            int sz=Q.size();
-            while(sz){
-                TreeNode * node=Q.front();
-                Q.pop();
-                if(node->left){
-                    Q.push(node->left);
-                }
-                if(node->right){
-                    Q.push(node->right);
-                }
-                tmp.push_back(node->val);
-                sz--;
-            }
-            res.push_back(tmp);
-            
-        }
-        return res;
-    }
-};
-
-```
-
-- 递归方式： 利用DFS的思想进行遍历，并根据遍历的深度存储数组：利用先序遍历的方式完成任务，只是额外添加了遍历层数，使得能够记录数字对应的层数；
-![avatar](102.png)
-![avatar](102-02.png)
-```
-class Solution {
-public:
-    vector<vector<int>> res;
-    void _level(TreeNode* root,int level){
-        if(root==NULL) return;
-        if(level>=res.size()){
-            res.push_back(vector<int>()); //提前添加空数组
-        }
-        res[level].push_back(root->val);
-        _level(root->left,level+1);
-        _level(root->right,level+1);
-    }
-    vector<vector<int>> levelOrder(TreeNode* root) {
-        _level(root,0);
-        
-        return res;
-    }
-};
-```
-
-### 108. 有序数组转搜索二叉树
+### 108. 有序数组转搜索二叉树 [KEY]
 
 - 要求左右子树高度平衡，即需要选择数组中间位置的数字作为根节点
     当数组长度为奇数或者偶数时，存在差异：对于偶数时需要考虑选择偏左位置还是偏右位置的作为根节点，两者没有效果差异
