--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -31,6 +31,10 @@
 - [98. 验证二叉搜索树 [KEY]](#98-验证二叉搜索树-key)
 - [101. 对称二叉树](#101-对称二叉树)
 - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
+- [路径总和](#路径总和)
+- [从中序和后序中构建二叉树](#从中序和后序中构建二叉树)
+- [先序加中序构建二叉树](#先序加中序构建二叉树)
+- [填充每个节点的下一个右侧节点指针](#填充每个节点的下一个右侧节点指针)
 
 <!-- /code_chunk_output -->
 
@@ -460,3 +464,153 @@ public:
 
 ```
 ![avatar](./108-01.png)
+
+### 路径总和
+- 递归解法; 时间复杂度 O(N) 空间复杂度 O(H)
+```
+class Solution {
+public:
+    bool hasPathSum(TreeNode* root, int targetSum) {
+        if (root == nullptr) 
+            return false;
+        if (root -> left == nullptr && root -> right == nullptr) {
+            return root -> val == targetSum;
+        }
+        return hasPathSum(root -> left, targetSum - root->val) || hasPathSum(root -> right, targetSum - root->val);
+    }
+};
+```
+- 迭代解法： **与通用bfs相比，需要增加一个队列记录当前路径的总和**
+- 时间复杂度 O(N)； 空间复杂度 O(N)
+```
+class Solution {
+public:
+    bool hasPathSum(TreeNode* root, int targetSum) {
+        if (!root)
+            return false;
+        queue<TreeNode*> q;
+        queue<int> qv; // 增加一个队列来记录求和情况
+        qv.push(root -> val);
+        q.push(root);
+        while (!q.empty()) {
+            int q_size =  q.size();
+            for (int i = 0; i < q_size; i++) {
+                TreeNode* cur = q.front();
+                q.pop();
+                int tmp = qv.front();
+                qv.pop();
+                if (!cur -> left && !cur -> right) {
+                    if ( tmp == targetSum) {
+                        return true;
+                    }
+                }
+                if (cur -> left) {
+                    q.push(cur -> left);
+                    qv.push(cur -> left -> val + tmp);
+                }
+                if (cur -> right) {
+                    q.push(cur -> right);
+                    qv.push(cur -> right -> val + tmp);
+                }
+            }
+        }
+         return  false;
+    }
+};
+```
+
+### 从中序和后序中构建二叉树
+- 寻找根节点位置，并确定根节点在何处划分左右子树
+- 主要注意遍历方向
+```
+class Solution {
+public:
+    unordered_map<int, int> idx_map;
+    int post_idx = 0;
+    TreeNode* helper(int in_left, int in_right, vector<int>& inorder, vector<int>& postorder) {
+        if (in_left > in_right)
+            return nullptr;
+        //cout << post_idx <<endl;
+        int val = postorder[post_idx]; //根节点val
+        TreeNode* root = new TreeNode(val); //创建根节点
+        int in_idx = idx_map[val]; //获取左右子树分割索引
+        post_idx--; //后序数组下移到下个子根节点
+        
+        // 后序数组从后遍历是先根 后右节点，因此在dfs部分要先进右分支！！！
+        root -> right = helper(in_idx + 1, in_right, inorder, postorder); //先dfs走向右子树方向
+        root -> left = helper(in_left, in_idx - 1, inorder, postorder);
+        return root;
+    }
+    TreeNode* buildTree(vector<int>& inorder, vector<int>& postorder) {
+        for (int i = 0; i < inorder.size(); i++) {
+            idx_map[inorder[i]] = i;
+        }
+        post_idx = postorder.size() - 1;
+        TreeNode* root = helper(0, post_idx, inorder, postorder);
+        return  root;
+    }
+};
+```
+
+### 先序加中序构建二叉树
+
+- 构建方法：根据先序数组获得根节点值，并对中序数组建立节点值-索引的哈希表
+- 每次从先序表中取root值，然后对应的从中序表中获取对应的索引，从而得到划分左右子树的index
+- 直接根据root值创建节点，并基于index进行左右子树的创建递归
+- **根据先序数组的顺序（root，left，right），正向递归时先进left分支**
+- 时间复杂度O(N)，空间复杂度O（N）
+
+```
+class Solution {
+public:
+    unordered_map<int, int> idx_map;
+    int pre_idx;
+    TreeNode* helper(int in_left, int in_right, vector<int>& preorder, vector<int>& inorder) {
+        if(in_left > in_right) {
+            return nullptr;
+        }
+        int val = preorder[pre_idx];
+        TreeNode* root = new TreeNode(val);
+        int index = idx_map[val];
+        pre_idx++;
+        root -> left = helper(in_left, index - 1, preorder, inorder);
+        root -> right = helper(index + 1, in_right, preorder, inorder);
+        return root;
+    }
+    TreeNode* buildTree(vector<int>& preorder, vector<int>& inorder) {
+        for (int i = 0; i < inorder.size(); i++) {
+            idx_map[inorder[i]] = i;
+        }
+        pre_idx = 0;
+        return helper(0, preorder.size() - 1, preorder, inorder);
+    }
+};
+```
+
+### 填充每个节点的下一个右侧节点指针
+
+- 递归法，自顶而下的方法
+- **因为是完全二叉树**，可以将节点的左右子节点进行连接
+```
+class Solution {
+public:
+    void dfs(Node* left, Node* right) {
+        if (left == nullptr || right == nullptr) {
+            return;
+        }
+        left -> next = right;
+        dfs(left -> left, left -> right);
+        dfs(right -> left, right -> right);
+        dfs(left -> right, right -> left);
+    }
+    Node* connect(Node* root) {
+        if (!root) {
+            return root;
+        }
+        if (root -> left && root -> right) {
+            dfs(root -> left, root -> right);
+        }
+        return root;
+    }
+};
+```
