--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -614,3 +614,44 @@ public:
     }
 };
 ```
+- 对于非完全二叉树：使用队列迭代的方式进行处理，直接使用队列存储会带来额外的空间开销，可以做简单遍历
+- 基于逐层遍历的思想，在当前层对下一层进行next 连接，并记录当前层的开始节点
+- 然后进行逐层下移遍历
+- 时间复杂度 O(N) 空间复杂度 O(1)
+
+```
+class Solution {
+public:
+    void handle(Node* &last, Node* &p, Node* &nextStart ) {
+        if (last) {
+            last -> next = p;
+        }
+        if (!nextStart) {
+            nextStart = p;
+        }
+        last = p;  
+    }
+    Node* connect(Node* root) {
+        if (!root) {
+            return root;
+        }
+        Node* start = root; //记录当前层的开始节点
+        while (start) {
+            Node* p =start;
+            Node* last = nullptr; // 记录同层上一个节点
+            Node* nextStart = nullptr;
+            while (p) {
+                if(p -> left) {
+                    handle(last, p -> left, nextStart);
+                }
+                if(p -> right) {
+                    handle(last, p -> right, nextStart);
+                }
+                p = p -> next;
+            }
+            start = nextStart;
+        }
+        return root;
+    }
+};
+```
