--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -35,6 +35,8 @@
 - [从中序和后序中构建二叉树](#从中序和后序中构建二叉树)
 - [先序加中序构建二叉树](#先序加中序构建二叉树)
 - [填充每个节点的下一个右侧节点指针](#填充每个节点的下一个右侧节点指针)
+- [二叉树的最近公共祖先](#二叉树的最近公共祖先)
+- [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
 
 <!-- /code_chunk_output -->
 
@@ -590,7 +592,7 @@ public:
 ### 填充每个节点的下一个右侧节点指针
 
 - 递归法，自顶而下的方法
-- **因为是完全二叉树**，可以将节点的左右子节点进行连接
+- **因为是完全二叉树**，可以**将节点的左右子节点进行连接**
 ```
 class Solution {
 public:
@@ -652,6 +654,106 @@ public:
             start = nextStart;
         }
         return root;
+    }
+};
+```
+### 二叉树的最近公共祖先
+- 通过遍历实现，考虑二叉树节点的分布情况差异：
+  - 两个节点分布在左右子树中，最近公共祖先为root
+  - 左右子树都不存在，返回null
+  - 递归情况下位于同一子树，返回当前子树root
+- 时间复杂度： O(N), 空间复杂度 O(N)
+
+```
+class Solution {
+public:
+    TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {
+       if (root == nullptr || root == p || root == q) {
+           return root;
+       } 
+       TreeNode* leftNode = lowestCommonAncestor(root -> left, p, q);
+       TreeNode* rightNode = lowestCommonAncestor(root -> right, p, q);
+       // 左右子树都不存在
+       if (leftNode == nullptr && rightNode ==nullptr) {
+           return nullptr;
+       }
+       // 分别在左右子树 返回root节点
+       if (leftNode && rightNode) {
+           return root; 
+       }
+       // 存在于同侧 返回当前子树节点
+       return leftNode == nullptr ? rightNode : leftNode;
+       
+    }
+};
+```
+
+### 二叉树的序列化与反序列化 [HARD]
+- 基于先序遍历递归获取二叉树的string形式，在叶子节点添加空节点
+- sting : 'x,#,#'
+- 先对string进行切分，得到string数据队列，然后取队列头构建节点，遇到#即返回空，递归式添加节点
+```
+class Codec {
+public:
+    void reser(TreeNode* root, string& str) {
+        if (root == nullptr) {
+            str += "#,";
+            return;
+        }
+        str += to_string(root -> val);
+        str += ",";
+        reser(root -> left, str);
+        reser(root -> right, str);
+    }
+
+    // Encodes a tree to a single string.
+    string serialize(TreeNode* root) {
+        string res = "";
+        reser(root, res);
+        //cout << res << endl;
+        return res;
+    }
+
+    TreeNode* deser(queue<string>& datas) {
+        if (datas.empty())
+            return nullptr;
+        string cur = datas.front();
+        datas.pop();
+        if (cur == "#") {
+            return nullptr;
+        }
+        TreeNode* root = new TreeNode(stoi(cur));
+        root -> left = deser(datas);
+        root -> right =deser(datas);
+        return root;
+    }
+
+    // Decodes your encoded data to tree.
+    TreeNode* deserialize(string data) {
+        queue<string> datas;
+        int cnt = 0;
+        int begin = 0;
+        for (int i = 0; i < data.length(); i++) {
+            if (data[i] == ',') {
+                if (cnt){
+                    datas.push(data.substr(begin, cnt));
+                    //cout << data.substr(begin, cnt) << endl;
+                }
+                cnt = 0;
+                begin = i + 1;
+            }
+            else if (data[i] == '#') {
+                datas.push(data.substr(begin, 1));
+                //cout << data.substr(begin, 1) << endl;
+                cnt = 0;
+                begin = i + 1;
+            }
+            else {
+                cnt ++;
+            }
+        }
+        
+        return deser(datas);
     }
 };
 ```
