--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -133,10 +133,14 @@ public:
 };
 ```
 
-### 33. 搜索旋转排序数组 [KEY]
+### 33. 搜索旋转排序数组 [KEY] [Medium]
 - 中等题目
-- 给定的数组经过旋转后，是部分有序的。
+- 给定的数组经过旋转后，是**部分有序的**。如何定位旋转位置
 - 查找中的区间定位要发生改变，要考虑部分有序的区间来搜索：
+  - `num[0]<=num[mid]` 搜索位于左侧有序半区
+    - 判断target是否位于该半区，不在的话移动left
+  - `num[0]>num[mid]`  搜索位于搜侧有序半区
+    - 判断target是否位于该半区，不在的话移动right
 ```class Solution {
 public:
     int search(vector<int>& nums, int target) {
@@ -168,10 +172,55 @@ public:
     }
 };
 ```
+### 81. 搜索旋转有序数组 [有重复] [Medium]
+- 给出有序数组中是否有target
+- 与上题目相比需要考虑重复的情况，
+  - 重复情况下，二分查找将退化为线性搜索
+  - 需要做简单的线性移动查找即可
+  - 即当`nums[left]==nums[mid]`时进行线性判断，`left++`即可
 
-### 在排序数组中查找元素的第一个和最后一个位置
+```
+class Solution {
+public:
+    bool search(vector<int>& nums, int target) {
+        int left = 0;
+        int right = nums.size() - 1;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (nums[mid] == target)    
+                return true;
+            //cout << mid << " "<< left << " " << right << endl;
+            // 左区
+            if (nums[left] < nums[mid]) {
+                if(nums[left] <= target && nums[mid] > target ) {
+                    right = mid - 1;
+                } else {
+                    left = mid + 1;
+                }
+            } 
+            // 右区
+            else if (nums[left] > nums[mid]) {
+                if(nums[right] >= target && nums[mid] < target ) {
+                    left = mid + 1;
+                } else {
+                    right = mid - 1;
+                }
+            }
+            else if (nums[left] == nums[mid]) {
+                left++;
+            }
+        }
+        return false;
+
+    }
+};
+```
+
+
+
+### 34. 在排序数组中查找元素的第一个和最后一个位置  [Medium] **【Red面试题】**
 - 二分查找寻找边界
-- 分别寻找左右边界，重新定义一个函数来辅助实现
+- 分别**通过二分查找**寻找左右边界，重新定义一个函数来辅助实现；避免进入线性搜索的情况
 - 时间复杂度 O(logN) 空间复杂度 O(1)
 ```class Solution {
 public:
@@ -211,10 +260,10 @@ public:
 };
 ```
 
-### 658. Find K Closest Elements 
+### 658. Find K Closest Elements [Medium]
 - 中等题目
 - 二分查找找边界的变形应用
-- 给定有序数组，找出其中与目标`x`最接近的`K`个元素
+- 给定**有序数组**，找出其中与目标`x`最接近的`K`个元素
 - 思路：
     - 先用二分查找找到x的左边界：即首个`x>=`的值的index
     - 然后进行区间搜索，搜索出最优的K个近邻元素，即子区间
@@ -317,6 +366,8 @@ public:
 
 
 - 其他思路：**排除法**
+    - 最容易理解的方法，利用数组的有序特性，**从左右两侧调整指针，得到最优的空间**
+    - *类似于TwoSum的方法*
     - 利用双指针，从左到右逐一删除至k个元素
     - 时间复杂度： O(n) 线性复杂度; 空间复杂度 O(k)
 
