--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -37,6 +37,8 @@
 - [填充每个节点的下一个右侧节点指针](#填充每个节点的下一个右侧节点指针)
 - [二叉树的最近公共祖先](#二叉树的最近公共祖先)
 - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
+- [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
+- [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
 
 <!-- /code_chunk_output -->
 
@@ -468,6 +470,7 @@ public:
 ![avatar](./108-01.png)
 
 ### 路径总和
+- **计算从根节点到叶子节点的路径和**， 需要判断是否为叶节点
 - 递归解法; 时间复杂度 O(N) 空间复杂度 O(H)
 ```
 class Solution {
@@ -754,6 +757,66 @@ public:
         }
         
         return deser(datas);
+    }
+};
+```
+
+### 剑指26. 树的子结构 [Medium] [Tencent]
+- 二叉树的应用
+- 计算一个树B是否为另一个树A的子结构
+- 思路：先序遍历A树，然后从当前节点开始匹配计算
+  - 先helper(A,B) **即以当前节点开始匹配计算**
+  - 然后进行A树遍历，移动到左/右子树，isSubstructure(A->right,B)继续进行匹配
+  - 时间复杂度：`O(MN)` 节点数量之积； 空间复杂度： `O(M)` 极限情况下即树为链表结构
+```
+class Solution {
+public:
+    bool helper(TreeNode* A, TreeNode* B) {
+        if (B == nullptr) {
+            return true;  // 判断是否找到B树 
+        }
+        if (A == nullptr || A -> val != B -> val) {
+            return false;
+        }
+        return helper(A -> left, B -> left) && helper(A -> right, B -> right);
+    }
+    bool isSubStructure(TreeNode* A, TreeNode* B) {
+        if (A == nullptr || B == nullptr) {
+            return false;
+        }
+        bool r1 = helper(A, B);
+        bool r2 = isSubStructure(A -> left, B);
+        bool r3 = isSubStructure(A -> right, B);
+        return r1 || r2 || r3;
+    }
+};
+```
+
+### 113. 二叉树路径总和 2 [Medium] [Tencent]
+- 给你二叉树的根节点 root 和一个整数目标和 targetSum ，找出所有 从根节点到叶子节点 路径总和等于给定目标和的路径
+
+```
+class Solution {
+public:
+    vector<vector<int>> res;
+    vector<vector<int>> pathSum(TreeNode* root, int targetSum) {
+        vector<int> path;
+        backTrack(root, targetSum, 0, path);
+        return res;
+    }
+    void backTrack(TreeNode* root, int target, int sum, vector<int>& path) {
+        if (root == nullptr) {
+            return;
+        }
+        path.push_back(root -> val);
+        if (sum + root -> val ==target) {
+            if (!root -> left && !root -> right) {
+                res.push_back(path);
+            }
+        }
+        backTrack(root -> left, target, sum + root -> val, path);
+        backTrack(root -> right, target, sum + root -> val, path);
+        path.pop_back();
     }
 };
 ```
