--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -31,7 +31,7 @@
 - [98. 验证二叉搜索树 [KEY]](#98-验证二叉搜索树-key)
 - [101. 对称二叉树](#101-对称二叉树)
 - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
-- [路径总和](#路径总和)
+- [112. 路径总和 [EASY]](#112-路径总和-easy)
 - [从中序和后序中构建二叉树](#从中序和后序中构建二叉树)
 - [先序加中序构建二叉树](#先序加中序构建二叉树)
 - [填充每个节点的下一个右侧节点指针](#填充每个节点的下一个右侧节点指针)
@@ -39,6 +39,7 @@
 - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
 - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
 - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
+- [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
 
 <!-- /code_chunk_output -->
 
@@ -469,7 +470,7 @@ public:
 ```
 ![avatar](./108-01.png)
 
-### 路径总和
+### 112. 路径总和 [EASY]
 - **计算从根节点到叶子节点的路径和**， 需要判断是否为叶节点
 - 递归解法; 时间复杂度 O(N) 空间复杂度 O(H)
 ```
@@ -817,6 +818,67 @@ public:
         backTrack(root -> left, target, sum + root -> val, path);
         backTrack(root -> right, target, sum + root -> val, path);
         path.pop_back();
+    }
+};
+```
+### 437. 二叉树路径总和3 [Medium]
+- **没有从根节点到叶节点的路径限制**，计算所有可能的路径
+- 比前面的两个要复杂一些
+- 基本思路还是递归，与上面的二叉树子结构相似，通过两层递归嵌套来完成判断
+  - 外层递归主要决定当前路径的起点
+  - 内层递归主要计算以当前节点开始的路径数量
+- 时间复杂度 O(MN) 空间复杂度 O(N)
+- **本质上 这样的递归算法虽然比较容易理解，但是比较暴力，算法效率比较低**
+- 可以利用前缀和的思想，降低遍历成本，记录当前节点的前缀和，利用sum-target进行前缀和搜索，搜索得到即说明存在目标路径
+```
+class Solution {
+public:
+    int pathSum(TreeNode* root, int sum) {
+        if (root == nullptr) {
+            return 0;
+        }
+        int ans = 0;
+        ans += backTrack(root, sum);
+        ans += pathSum(root -> left, sum);
+        ans += pathSum(root -> right, sum);
+        return ans;
+    }
+    int backTrack(TreeNode* root, int sum) {
+        if (root == nullptr) {
+            return 0;
+        }
+        int count = 0;
+        if (sum - root -> val == 0)
+            count++;
+        return count + backTrack(root -> left, sum - root -> val) + backTrack(root -> right, sum - root -> val);
+    }
+};
+```
+- **前缀和**做法
+  - 使用hash map来存储遍历过程中的前缀，需要进行**初始化** `prex[0] = 1`
+  - 时间复杂度 O(N)  空间复杂度 O(N) 
+```
+class Solution {
+public:
+    int pathSum(TreeNode* root, int sum) {
+        unordered_map<int, int> prex;
+        prex[0] = 1; // c初始化前缀树，如果没有初始的前缀0，结果会出错
+        return backTrack(root, prex, sum, 0);
+    }
+    int backTrack(TreeNode* root, unordered_map<int, int>& prex, int target, int curSum) {
+        if (root == nullptr) {
+            return 0;
+        }
+        int count = 0;
+        curSum += root -> val;
+        int tmp = curSum - target;
+        count += prex[tmp];
+
+        prex[curSum]++;
+        count += backTrack(root -> left, prex, target, curSum);
+        count += backTrack(root -> right, prex, target, curSum);
+        prex[curSum]--;
+        return count;
     }
 };
 ```
